--- a/package.json
+++ b/package.json
@@ -44,14 +44,15 @@
     "zod": "^3.23.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.3",
     "@types/node": "^20.0.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "autoprefixer": "^10.4.0",
     "eslint": "^9.0.0",
     "eslint-config-next": "^15.0.8",
-    "postcss": "^8.4.0",
-    "tailwindcss": "^3.4.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.0.3",
     "typescript": "^5.0.0"
   }
 }
